ghc-4335c07/testsuite/tests/parser/should_fail/readFail015.hs
module Test where

-- should fail; doesn't with happy 1.8.
f = f where b = f
            c = (b
