ghc-4335c07/testsuite/tests/parser/should_fail/readFail015.stderr

readFail015.hs:6:1: parse error (possibly incorrect indentation or mismatched brackets)
